CMAKE_MINIMUM_REQUIRED(VERSION 3.12)
SET(PROJECT_NAME cephfstool)
PROJECT(${PROJECT_NAME})

IF(NOT CMAKE_BUILD_TYPE)
  SET(CMAKE_BUILD_TYPE "Release")
ENDIF()

IF(NOT CMAKE_INSTALL_PREFIX)
    SET(CMAKE_INSTALL_PREFIX "/usr/local/cephcli")
ENDIF()

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src)


SET(_SRCS src/cephfstool.h src/utils.h src/cephfstool.cpp)
ADD_LIBRARY(${PROJECT_NAME} ${_SRCS})

SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES PUBLIC_HEADER "src/cephfstool.h")
TARGET_COMPILE_OPTIONS(${PROJECT_NAME} PUBLIC -fPIC -std=c++11 -Wall -Wextra -Werror -g -D_FILE_OFFSET_BITS=64)

INSTALL(TARGETS ${PROJECT_NAME}
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION lib
    ARCHIVE DESTINATION lib
    PUBLIC_HEADER DESTINATION include)

ADD_SUBDIRECTORY(test)
ADD_SUBDIRECTORY(python)

